--- a/src/App.css
+++ b/src/App.css
@@ -27,13 +27,15 @@
 .product-list {
   margin: 10px;
   display: flex;
+  flex-wrap: wrap;
 }
 
 .product {
-  border: 2px dashed gray;
+  border: 1px dashed darkkhaki;
+  border-radius: 20px;
   margin: 10px;
   padding: 10px;
-  max-width: 300px;
+  width: 300px;
   font-size: 1.3rem;
 }
 
