--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,13 @@
 * {
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
 }
 
 .header-items {
     margin: 10px;
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
     gap: 2px;
 }
@@ -26,4 +29,31 @@
     color: white;
     font-weight: bold;
     border: none;
+}
+
+.products {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 10px;
+}
+
+.product {
+    flex-basis: 400px;
+    padding: 10px;
+    border: 1px dotted goldenrod;
+    border-radius: 1rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    gap: 1rem;
+}
+
+.product img {
+        height: 200px;
+        object-fit: contain;
+    }
+
+.product-title {
+    font-size: 1.3rem;
 }
